# browser-MCP

./: .env.example  .gitattributes  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
mcp.examples/: claude-code-docker.json  claude-code-local.json  claude-code-remote.json
src/agenteqa_navigator/: __init__.py  __main__.py  config.py
src/agenteqa_navigator/actions/: forms.py  mouse.py  resolve.py
src/agenteqa_navigator/browser/: manager.py  waits.py
src/agenteqa_navigator/cdp/: connection.py  events.py
src/agenteqa_navigator/chrome/: launcher.py  ws_url.py
src/agenteqa_navigator/mcp/: server.py
src/agenteqa_navigator/snapshot/: filter.py
src/browser_mcp/: __init__.py  __main__.py  config.py
src/browser_mcp/actions/: keyboard.py
src/browser_mcp/browser/: manager.py
src/browser_mcp/mcp/: server.py
src/browser_mcp/snapshot/: collector.py  filter.py  refmap.py  serializer.py
src/fast_browser_mcp/: __init__.py  __main__.py  config.py
src/fast_browser_mcp/browser/: waits.py
src/fast_browser_mcp/mcp/: server.py  tools.py
src/fast_browser_mcp/snapshot/: collector.py
tests/: test_integration_smoke.py  test_launcher.py  test_refmap.py  test_serializer.py
