[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteqa-navigator"
version = "0.1.0"
description = "Ultra-fast, human-like web navigator over Chrome DevTools Protocol, exposed as an MCP server."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.10,<2",      # SDK MCP oficial + FastMCP (stdio)
    "cdp-use>=1.4,<2",   # cliente CDP async (send_raw + event registry)
    "websockets>=12",    # transporte WS (lo usa cdp-use)
    "httpx>=0.27",       # GET /json/version
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]
sse = ["uvicorn>=0.30", "starlette>=0.40"]
all = ["uvicorn>=0.30", "starlette>=0.40"]

[project.scripts]
agenteqa-navigator = "agenteqa_navigator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
